@startuml

skinparam classAttributeIconSize 0
left to right direction

' Controller
class StockOutputController {
    +GetDetail(Id: int)
}

' Service Interfaces
interface ITransactionService
interface IWarehouseService
interface IUserService
interface ITransactionDetailService
interface IProductService

' Entity/DTO Classes with Attributes
class Transaction {
    +TransactionId: int
    +TransactionDate: DateTime
    +Status: int
    +WarehouseId: int
    +CustomerId: int
}
class Warehouse {
    +WarehouseId: int
    +WarehouseName: string
}
class User {
    +UserId: int
    +FullName: string
    +Phone: string
    +Email: string
}
class TransactionDetail {
    +Id: int
    +ProductId: int
    +Quantity: int
    +UnitPrice: decimal
    +Subtotal: decimal
}
class Product {
    +ProductId: int
    +ProductName: string
    +WeightPerUnit: decimal
}

' --- Relations ---

' Controller uses Services
StockOutputController ..> ITransactionService : uses
StockOutputController ..> IWarehouseService : uses
StockOutputController ..> IUserService : uses
StockOutputController ..> ITransactionDetailService : uses
StockOutputController ..> IProductService : uses

' Services manage Entities
ITransactionService ..> Transaction : manages
IWarehouseService ..> Warehouse : manages
IUserService ..> User : manages
ITransactionDetailService ..> TransactionDetail : manages
IProductService ..> Product : manages

' Relationships between Entities
Transaction "1" -- "1..*" TransactionDetail : contains
Transaction -- Warehouse : from
Transaction -- User : for (customer)
TransactionDetail -- Product : of

@enduml